--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,5 +24,16 @@
   }
   
   .navbar-link:hover {
-    color: var(--primary);
+    background-color: greenyellow;
+  }
+
+  .navbar-link-logout {
+    text-decoration: none;
+    font-family: "Nanum Gothic";
+    font-weight: bolder;
+    color: black;
+  }
+
+  .navbar-link-logout:hover {
+    background-color: red;
   }
