--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,5 +1,6 @@
 .auth-container {
-  border: 2px solid black;
+  border: 4px solid #d26d1a;
+  border-radius: 2rem;
   margin: 3rem 15rem;
   padding: 2rem;
 }
@@ -16,7 +17,7 @@
 
 .auth-form-input {
   padding: 0.25rem;
-  border: 2px solid black;
+  border: 2px solid #d26d1a;
 }
 
 .register-link {
@@ -30,11 +31,12 @@
 
 .register {
   text-decoration: none;
-
+  color: black;
 }
 
 .submit {
   padding: 5px;
+  background-color: #ffb445;
 }
 
 .submit:hover {
