--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -8,13 +8,16 @@
 }
 
 .profile-container {
-    border: 2px solid black;
+    border: 4px solid #d26d1a;
+    border-radius: 1rem;
     width: 50%;
     height: fit-content;
     padding: 10px;
 }
 
 .profile-heading {
-    border-bottom: 2px solid black;
+    border-bottom: 4px solid #d26d1a;
+    border-radius: 4px;
     width: 100%
 }
+
