--- a/src/components/welcome/Welcome.css
+++ b/src/components/welcome/Welcome.css
@@ -3,7 +3,8 @@ body {
 }
 
 .welcome-card {
-    border: 2px solid black;
+    border: 4px solid #d26d1a;
+    border-radius: 2rem;
     width: 50%;
     margin: 0 auto;
     text-align: center;
@@ -12,6 +13,8 @@ body {
 
 .welcome-btn {
     font-size: 24px;
+    background-color: #ffb445;
+    border: 2px solid #d26d1a
 }
 
 .welcome-btn:hover {
