--- a/src/components/Catalogue/MyCatalogue.css
+++ b/src/components/Catalogue/MyCatalogue.css
@@ -2,6 +2,23 @@ button {
     border: 2px solid #d26d1a;
     text-decoration: none;
     padding: 5px;
+    font-family: "Nanum Gothic";
+}
+
+input {
+    font-family: "Nanum Gothic";
+    padding: 2px;
+    border: 2px solid #d26d1a;
+    width: 100%;
+    margin-top: 5px;
+}
+
+select {
+    font-family: "Nanum Gothic";
+    padding: 2px;
+    border: 2px solid #d26d1a;
+    width: 100%;
+    margin-top: 5px;
 }
 
 table, th, td {
@@ -12,8 +29,10 @@ table, th, td {
 
 .catalogue-options {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
+    flex-direction: column;
     margin-bottom: 10px;
+    width: 10%
 }
 
 .button-column {
@@ -22,9 +41,10 @@ table, th, td {
 }
 
 .add-record-btn {
-    margin-right: 500px;
     color: black;
     background-color: #ffb445;
+    border-radius: 4px;
+    transition: background-color 0.2s linear;
 }
 
 .add-record-btn:hover {
@@ -33,21 +53,29 @@ table, th, td {
 }
 
 .edit-record-btn {
-    background-color: #ffb445;
+    background-color: #fffaca;
+    display: flex;
+    justify-content: center;
+    border: none;
 }
 
 .edit-record-btn:hover {
-    background-color: greenyellow;
     cursor: pointer;
 }
 
 .edit-btn-link {
     text-decoration: none;
     color: black;
+    border: none;
 }
 
 .form-field {
     border: none;
+}
+
+.new-record-heading { 
+    margin-left: 20px;
+    text-align: center;
 }
 
 .text-input {
@@ -68,6 +96,8 @@ table, th, td {
     font-size: 20px;
     padding: 5px;
     background-color: #ffb445;
+    margin: 10px 20px;
+    border-radius: 4px;
 }
 
 .submit-btn:hover {
@@ -78,8 +108,9 @@ table, th, td {
 .delete-btn {
     font-size: 20px;
     padding: 5px;
-    margin-right: 10px;
+    margin: 10px 20px;
     background-color: #ffb445;
+    border-radius: 4px;
 }
 
 .delete-btn:hover {
@@ -92,11 +123,17 @@ table, th, td {
     justify-content: right;
 }
 
-.new-record-card {
+.card {
     width: 50%;
     border: 5px solid #d26d1a;
     border-radius: 1rem;
     padding: 8px;
+}
+
+.new-record-form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .catalogue-count {
