--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -18,6 +18,10 @@
     margin: auto 0;
   }
 
+  .logo-heading {
+    display: flex;
+  }
+
   img {
     margin-left: 10px;
   }
@@ -29,10 +33,6 @@
     font-size: 20px;
     color: black;
   }
-  
-  .navbar-link:hover {
-    background-color: greenyellow;
-  }
 
   .navbar-link-logout {
     text-decoration: none;
@@ -40,8 +40,4 @@
     font-weight: bolder;
     font-size: 20px;
     color: black;
-  }
-
-  .navbar-link-logout:hover {
-    background-color: red;
   }
