--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,3 +1,7 @@
+button {
+  background-color: #ffb445;
+}
+
 .auth-container {
   border: 4px solid #d26d1a;
   border-radius: 2rem;
@@ -37,8 +41,17 @@
 .submit {
   padding: 5px;
   background-color: #ffb445;
+  transition: border-width 0.2s linear;
 }
 
 .submit:hover {
-  background-color: greenyellow;
+  border-width: 6px;
+}
+
+.login-heading {
+  display: flex;
+}
+
+img {
+  margin-right: 10px;
 }
