--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -21,3 +21,18 @@
     width: 100%
 }
 
+.edit-input {
+    width: 25%;
+}
+
+.edit-profile-container {
+    width: 50%;
+    border: 4px solid #d26d1a;
+    border-radius: 1rem;
+    height: fit-content;
+    padding: 10px;
+}
+
+.save-profile-btn-div {
+    text-align: right;
+}
