--- a/src/components/Catalogue/MyCatalogue.css
+++ b/src/components/Catalogue/MyCatalogue.css
@@ -147,3 +147,8 @@ table, th, td {
     background-color: #ffb445;
     border-radius: 3px;
 }
+
+.catalogue {
+    margin-left: 30px;
+    margin-top: 30px;
+}
