--- a/src/components/Catalogue/MyCatalogue.css
+++ b/src/components/Catalogue/MyCatalogue.css
@@ -152,3 +152,38 @@ table, th, td {
     margin-left: 30px;
     margin-top: 30px;
 }
+
+.record-table-recordName:hover {
+    background-color: #ffb445;
+}
+
+.post-thoughts-input {
+    resize: none;
+    width: 500px;
+    height: 200px;
+    border: 2px solid #d26d1a;
+    font-family: "Nanum Gothic";
+}
+
+.post-user-interaction {
+    display: flex;
+    flex-direction: column;
+    width: 40%
+}
+
+.post-submit-btn {
+    width: 20%;
+    margin-top: 10px;
+    border-radius: 4px;
+    transition: background-color 0.2s linear;
+}
+
+.post-submit-btn:hover {
+    background-color: lightgreen;
+    cursor: pointer;
+}
+
+.new-post-body {
+    margin-top: 30px;
+    margin-left: 30px;
+}
